Make parameter avaliable before O